2018-05-18      James   User                    Add login interceptor to increase different user logins with different access rights.
2018-05-21      James   User                    Add delete user function.
2018-05-21      James   Version                 Change the version.
2018-05-22      James   KeyBuffer               Change the keybuffer to real-time one-second report graphs and history all line charts.
2018-05-25      James   Keybuffer and KeyRate   Remove the Keybuffer and KeyRate from the SNMPTrap module.
2018-05-25      James   Redis                   Redis caching is added for KeyRate and KeyBuffer.
2018-05-31      James   Login                   Login to enter the user name and password and press enter to log in directly.
2018-05-31      James   Node                    Fixed a problem with form validation errors but still adding nodes.
2018-05-31      James   NetElement              Fixed a problem with form validation errors but still adding netElements.
2018-06-01      James   Menu                    Solved the order of the left menu bar.
2018-06-04      James   HistoryAlarm            HistoryAlarm are not filtered and saved.
2018-06-04      James   RTAlarm                 RTAlarm filter before saving.
2018-06-05      James   QRNGTN                  Add the TN display of the QRNG version on the Top Node Topology and TN Topology Pages.
2018-06-05      James   addNode                 Solve the problem of adding nodes and failing IP authentication will also add success.
2018-06-05      James   NERelation              The field link_type was added to the database, and the linkType attribute was added to the NERelation class.
2018-06-06      James   NetElement              Adding NEs and Editing NEs have Added IP and Name Do Not Repeat Authentication.
2018-06-07      James   Node                   Adding Nodes have Added IP and Name Do Not Repeat Authentication.