@@ -212,7 +212,9 @@
                     trigger: 'item',
                     formatter: "{a} <br/>{b} : {c} ({d}%)"
                 },
-                color:['lightseagreen','green','navy'],
+                color:[
+//                    'lightseagreen',
+                    'green','navy'],
                 calculable : true,
                 series : [
                     {
