@@ -22,5 +22,7 @@ Date		Name	Module			Description
 2018-06-05      James   QRNGTN                  Add the TN display of the QRNG version on the Top Node Topology and TN Topology Pages.
 2018-06-05      James   addNode                 Solve the problem of adding nodes and failing IP authentication will also add success.
 2018-06-05      James   NERelation              The field link_type was added to the database, and the linkType attribute was added to the NERelation class.
-2018-06-06      James   NetElement              Adding NEs and Editing NEs have Added IP and Name Do Not Repeat Authentication.
-2018-06-07      James   Node                   Adding Nodes have Added IP and Name Do Not Repeat Authentication.
+2018-06-06      James   NetElement              Add NEs and Editing NEs have Added IP and Name Do Not Repeat Authentication.
+2018-06-07      James   Node                    Add Nodes have Added IP and Name Do Not Repeat Authentication.
+2018-06-07      James   QNCRate                 Add QNCRate's real-time curve and history line display.
+2018-06-11      James   Version                 Version for QKD NMS_Server_18.05.R04.S01.
